amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-covariance.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-covariance.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 3

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#required-fields
  Message: field 'name' required by interface 'PetOwner' cannot be nullable because its definition is non-nullable
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-covariance.api.graphql#/declares/shape/DogOwnerWrong
  Property: http://a.ml/vocabularies/shapes#schema
  Range: [(31,4)-(31,16)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#required-fields
  Message: Field 'pet' required by interface 'PetOwner' must be of type 'Pet'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-covariance.api.graphql#/declares/shape/DogOwnerWrong
  Property: http://a.ml/vocabularies/shapes#schema
  Range: [(32,4)-(32,17)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#required-fields
  Message: Field 'otherPets' required by interface 'PetOwner' must be of type ''
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-covariance.api.graphql#/declares/shape/DogOwnerWrong
  Property: http://a.ml/vocabularies/shapes#schema
  Range: [(33,4)-(33,25)]
  Location: 
